==2011-04==
* Finished storage refactoring
* Added device component
* Refactored storage framework
* Removed OEComponent delegate infrastructure
* Added OEComponent update() call after re-configuration
* Removed OEComponent observer helpers

==2011-03==
* Stabilized video API
* Fixed variable names
* Fixed OpenGL thread nastiness
* Tested persistence with OpenGL accumulation buffer. No way.
* Improved shadow mask

==2011-02==
* Implemented shader shadow mask/aperture grille
* Implemented render to texture by parts
* Separated shader programs into: RGB, NTSC, PAL and screen programs
* Implemented Y'IQ decoding with I 1.3 MHz bandwidth and Q 0.6 MHz bandwidth
* Implemented composite phase per scan-line for NTSC/PAL
* Implemented removable device property
* Implemented system events. Each devices registers itself. An emulation gets these events and delegates them.
* Implemented shader center lighting 
* Fixed Document initialization problem
* Implemented monochrome shader decoder
* Implemented RGB decoder
* Improved canvas configuration
* Optimized shader

==2011-01==
* Fixed shader white IRE level
* Added shader scanlines
* Fixed vertical and horizontal centers
* Moved barrel center from content center to canvas center
* Implemented shader brightness clear color
* Implemented OpenGL 2.0 shader
* Fixed OpenGL context problem when closing an emulation.
* Implemented frame communication to the canvas
* Improved emulation window sizing
* Fixed race condition with display link and closing documents
* Implemented windowForSheet in Document
* Implemented [Document updateChangeCount]
* Implemented interface to signal an active emulation
* Implemented OEImage for easily reading PNG files
* Fixed display link/emulation/UI thread synchronization
* Implemented character palette
* Implemented disabling Mac OS X global keys. When installing or running, this should be executed:
sudo touch /private/var/db/.AccessibilityAPIEnabled